--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "@astrojs/tailwind": "^2.1.2",
     "astro": "^1.6.0",
     "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "prettier": "^2.7.1",
+    "prettier-plugin-astro": "^0.7.0"
   }
 }
